<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:padding="10dp"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/widok" />

    <TextView
        android:id="@+id/likeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/likes"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/addLike"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/violet"
            android:layout_weight="1"
            android:text="@string/likeButton" />
        <Button
            android:id="@+id/deleteLike"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/violet"
            android:layout_weight="1"
            android:text="@string/deleteButton" />
    </LinearLayout>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textEmailAddress"
        android:hint="@string/emailHint"/>
    <EditText
        android:id="@+id/passEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/repPassEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/saveButton"/>
    <Button
        android:id="@+id/showUser"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/showUserButton"/>

    <TextView
        android:id="@+id/infoBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoText"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>